more infrastructure for proof scripts
# Conflicts:
#	key.core/src/main/java/de/uka/ilkd/key/logic/Semisequent.java
#	key.core/src/main/java/de/uka/ilkd/key/scripts/RuleCommand.java
#	key.core/src/main/java/de/uka/ilkd/key/scripts/SetCommand.java
#	key.core/src/main/java/de/uka/ilkd/key/strategy/StrategyProperties.java