@@ -3,26 +3,31 @@ package de.uka.ilkd.key.macros;
 import de.uka.ilkd.key.control.AbstractUserInterfaceControl;
 import de.uka.ilkd.key.control.UserInterfaceControl;
 import de.uka.ilkd.key.java.JavaTools;
+import de.uka.ilkd.key.java.Position;
 import de.uka.ilkd.key.java.SourceElement;
 import de.uka.ilkd.key.java.statement.JmlAssert;
-import de.uka.ilkd.key.logic.PosInOccurrence;
-import de.uka.ilkd.key.logic.Term;
+import de.uka.ilkd.key.logic.JTerm;
 import de.uka.ilkd.key.logic.op.UpdateApplication;
-import de.uka.ilkd.key.macros.scripts.ProofScriptEngine;
+import de.uka.ilkd.key.nparser.KeyAst;
 import de.uka.ilkd.key.parser.Location;
 import de.uka.ilkd.key.proof.Goal;
 import de.uka.ilkd.key.proof.Proof;
-import de.uka.ilkd.key.prover.ProverTaskListener;
 import de.uka.ilkd.key.rule.JmlAssertBuiltInRuleApp;
-import de.uka.ilkd.key.rule.JmlAssertRule;
-import de.uka.ilkd.key.rule.RuleApp;
-import de.uka.ilkd.key.speclang.njml.JmlParser.AssertionProofContext;
+import de.uka.ilkd.key.scripts.ProofScriptEngine;
+import de.uka.ilkd.key.scripts.ScriptCommandAst;
 import de.uka.ilkd.key.speclang.njml.JmlParser.ProofArgContext;
 import de.uka.ilkd.key.speclang.njml.JmlParser.ProofCmdCaseContext;
 import de.uka.ilkd.key.speclang.njml.JmlParser.ProofCmdContext;
+import org.jspecify.annotations.NonNull;
+import org.key_project.prover.engine.ProverTaskListener;
+import org.key_project.prover.rules.RuleApp;
+import org.key_project.prover.sequent.PosInOccurrence;
 import org.key_project.util.collection.ImmutableList;
 
-import java.net.URL;
+import java.net.URI;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 public class ApplyScriptsMacro extends AbstractProofMacro {
@@ -49,21 +54,21 @@ public class ApplyScriptsMacro extends AbstractProofMacro {
     }
 
     @Override
-    public boolean canApplyTo(Proof proof, ImmutableList<Goal> goals, PosInOccurrence posInOcc) {
+    public boolean canApplyTo(Proof proof, ImmutableList<@NonNull Goal> goals, PosInOccurrence posInOcc) {
         return fallBackMacro.canApplyTo(proof, goals, posInOcc)
                 || goals.exists(g -> getScript(g) != null);
     }
 
-    private static AssertionProofContext getScript(Goal goal) {
+    private static KeyAst.JMLProofScript getScript(Goal goal) {
         RuleApp ruleApp = goal.node().parent().getAppliedRuleApp();
         if (ruleApp instanceof JmlAssertBuiltInRuleApp) {
-            Term target = ruleApp.posInOccurrence().subTerm();
+            JTerm target = (JTerm) ruleApp.posInOccurrence().subTerm();
             if (target.op() instanceof UpdateApplication) {
                 target = UpdateApplication.getTarget(target);
             }
             final SourceElement activeStatement = JavaTools.getActiveStatement(target.javaBlock());
-            if (activeStatement instanceof JmlAssert) {
-                return ((JmlAssert) activeStatement).getAssertionProof();
+            if (activeStatement instanceof JmlAssert jmlAssert) {
+                return jmlAssert.getAssertionProof();
             }
         }
         return null;
@@ -77,15 +82,15 @@ public class ApplyScriptsMacro extends AbstractProofMacro {
             if (Thread.interrupted()) {
                 throw new InterruptedException();
             }
-            AssertionProofContext proofCtx = getScript(goal);
-            if (proofCtx == null) {
+            KeyAst.JMLProofScript proofScript = getScript(goal);
+            if (proofScript == null) {
                 fallBackMacro.applyTo(uic, proof, ImmutableList.of(goal), posInOcc, listener);
                 continue;
             }
-            String renderedProof = renderProof(proofCtx);
+            List<ScriptCommandAst> renderedProof = renderProof(proofScript);
             // TODO get this location from the jmlAssertion statement ...
-            Location loc = new Location(new URL("file:///tmp/unknown.key"), 42, 42);
-            ProofScriptEngine pse = new ProofScriptEngine(renderedProof, loc, goal);
+            Location loc = new Location(new URI("unknown:XXX"), Position.UNDEFINED);
+            ProofScriptEngine pse = new ProofScriptEngine(renderedProof, goal);
             System.out.println("---- Script");
             System.out.println(renderedProof);
             pse.execute((AbstractUserInterfaceControl) uic, proof);
@@ -93,55 +98,53 @@ public class ApplyScriptsMacro extends AbstractProofMacro {
         return new ProofMacroFinishedInfo(this, proof);
     }
 
-    private static String renderProof(AssertionProofContext ctx) {
-        StringBuilder sb = new StringBuilder();
-        for (ProofCmdContext proofCmdContext : ctx.proofCmd()) {
-            renderProofCmd(proofCmdContext, sb);
+    private static List<ScriptCommandAst> renderProof(KeyAst.JMLProofScript script) {
+        List<ScriptCommandAst> result = new ArrayList<>();
+        for (ProofCmdContext proofCmdContext : script.ctx.proofCmd()) {
+            result.addAll(renderProofCmd(proofCmdContext));
         }
-        return sb.toString();
+        return result;
     }
 
-    private static void renderProofCmd(ProofCmdContext ctx, StringBuilder sb) {
-        if (ctx.cmd != null) {
-            sb.append(ctx.cmd.getText()).append(" ");
-            for (ProofArgContext arg : ctx.proofArg()) {
-                if (arg.argLabel != null) {
-                    sb.append(arg.argLabel.getText()).append("=");
-                }
-                sb.append(arg.token.getText()).append(" ");
-            }
-            sb.append(";\n");
+    private static List<ScriptCommandAst> renderProofCmd(ProofCmdContext ctx) {
+        List<ScriptCommandAst> result = new ArrayList<>();
 
-        } else if (ctx.assertion != null) {
-            sb.append("cut ").append(ctx.assertion).append(";\n");
-            sb.append("branches \"push\";\n");
-            sb.append("branches \"select\" child=0;\n");
-            if (ctx.proofCmd().isEmpty()) {
-                sb.append("auto;\n");
+        // Push the current branch context
+        result.add(new ScriptCommandAst("branches", Map.of(), List.of("push")));
+
+        // Compose the command itself
+        Map<String, Object> named = new HashMap<>();
+        List<Object> positional = new ArrayList<>();
+        for (ProofArgContext argContext : ctx.proofArg()) {
+            // FIXME: actually render the argument value. This is just a placeholder
+            var value = argContext.expression().getText();
+            if (argContext.argLabel != null) {
+                named.put(argContext.argLabel.getText(), value);
             } else {
-                for (ProofCmdContext proofCmdContext : ctx.proofCmd()) {
-                    renderProofCmd(proofCmdContext, sb);
-                }
+                positional.add(value);
             }
-            sb.append("branches \"select\" child=1;\n");
-            sb.append("branches \"pop\";\n");
+        }
+        result.add(new ScriptCommandAst(ctx.cmd.getText(), named, positional, null, Location.fromToken(ctx.start)));
 
-        } else if (!ctx.proofCmdCase().isEmpty()) {
-            sb.append("branches \"push\";\n");
-            int no = 0;
-            for (ProofCmdCaseContext caseContext : ctx.proofCmdCase()) {
-                if (caseContext.STRING_LITERAL() != null) {
-                    sb.append("branches \"select\" branch=")
-                            .append(caseContext.STRING_LITERAL().getText()).append(";\n");
-                } else {
-                    sb.append("branches \"select\" child=").append(no++).append(";\n");
-                }
-                for (ProofCmdContext proofCmdContext : caseContext.proofCmd()) {
-                    renderProofCmd(proofCmdContext, sb);
-                }
+        // handle proofCmd if present
+        if(!ctx.proofCmd().isEmpty()) {
+            result.add(new ScriptCommandAst("branches", Map.of("child", 0), List.of("select")));
+            for (ProofCmdContext proofCmdContext : ctx.proofCmd()) {
+                result.addAll(renderProofCmd(proofCmdContext));
             }
-            sb.append("branches \"pop\";\n");
         }
 
+        // handle proofCmdCase if present
+        for (ProofCmdCaseContext pcase : ctx.proofCmdCase()) {
+            result.add(new ScriptCommandAst("branches", Map.of("name", pcase.label), List.of("select")));
+            for (ProofCmdContext proofCmdContext : pcase.proofCmd()) {
+                result.addAll(renderProofCmd(proofCmdContext));
+            }
+        }
+
+        // Pop the branch stack
+        result.add(new ScriptCommandAst("branches", Map.of(), List.of("pop")));
+
+        return result;
     }
 }
